syntax = "proto3";
package container;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/container";




import "google/protobuf/struct.proto";

/*
IngressBackend
*/
message IngressBackend {
    /*
    服务名称
    */
    string serviceName = 1 ;
    /*
    服务端口
    */
    google.protobuf.Value servicePort = 2 ;
}

